--- a/transposh.css
+++ b/transposh.css
@@ -4,42 +4,67 @@
  * Overlibmws library - For the dialog popups
  */
 
+/*
+ * Fix collisions with some themes
+ */
+ 
+#overDiv table {
+    border-left: 0px solid; 
+    border-right: 0px solid; 
+    border-bottom: 0px solid; 
+    border-top: 0px solid; 
+    text-align:center;
+    margin: 0px;
+    padding: 0px;}
+
+#overDiv table th, #overDiv table td {
+    border-left: 0px solid; 
+    border-right: 0px solid; 
+    border-bottom: 0px solid; 
+    border-top: 0px solid; 
+    text-align:center;
+    margin: 0px;
+    padding: 1px;} 
+
+#overDiv table tr:hover {
+    background-color:#225588;}
+
+/*
+ * Define our styling
+ */
+
 .olbgD {
-    background-color:#225588;
-}
+    background-color:#225588;}
 
 .olcgD {
     background-color:#336699; 
-    text-align:center;
-}
+    text-align:center;}
 
 .olfgD {
     background-color:#bbddff; 
-    text-align:center;
-}
+    text-align:center;}
+
 .olcapD {font-family:Verdana,Arial,
          Helvetica,sans-serif; 
          font-size:11px;
          font-weight:bold; 
          color:#ffffff;}
+         
 .olcloD {
     font-family:Verdana,Arial,
     Helvetica,sans-serif; 
     font-size:11px;
     color:#bbddff; 
-    font-weight:bold;
-}
+    font-weight:bold;}
 
 a.olcloD:hover { 
-    color:#ddeeff;
-}
+    color:#ddeeff;}
 
 .oltxtD {
     font-family:Verdana,
     Arial,Helvetica,
     sans-serif; font-size:13px;
-    color:#000000; 
-}
+    color:#000000;}
 
 .sep4 {
     font-size:4px;
@@ -51,12 +76,10 @@ a.olcloD:hover {
 
 .olraisedBlue {
     text-align:center; 
-    background:#33aaff url(raised_blue.gif) repeat-x bottom left;
-}
+    background:#33aaff url(raised_blue.gif) repeat-x bottom left;}
 
 table.olraisedBlue {
-    border-bottom:1px solid #333399;
-}
+    border-bottom:1px solid #333399;}
 
 .oltxtRaisedBlue {
     font-family:Verdana;
