--- a/transposh.css
+++ b/transposh.css
@@ -7,21 +7,21 @@
 /*
  * Fix collisions with some themes
  */
+
+#overDiv {
+    border: 0px; 
+    text-align:center;
+    margin: 0px;
+    padding: 0px;}
  
 #overDiv table {
-    border-left: 0px solid; 
-    border-right: 0px solid; 
-    border-bottom: 0px solid; 
-    border-top: 0px solid; 
+    border: 0px; 
     text-align:center;
     margin: 0px;
     padding: 0px;}
 
 #overDiv table th, #overDiv table td {
-    border-left: 0px solid; 
-    border-right: 0px solid; 
-    border-bottom: 0px solid; 
-    border-top: 0px solid; 
+    border: 0px; 
     text-align:center;
     margin: 0px;
     padding: 1px;} 
