--- a/css/transposh.css
+++ b/css/transposh.css
@@ -6,7 +6,7 @@
  * Fix collisions with some themes
  */
 
-#overDiv {
+/*#overDiv {
     border: 0px; 
     text-align:center;
     margin: 0px;
@@ -26,7 +26,7 @@
 
 #overDiv table tr:hover {
     background-color:#225588;}
-
+*/
 .post .postbody .tr_img_, .attachment .tr_img_, .navigation .alignleft .tr_img_, .navigation .alignright .tr_img_,
 .tr_img_ {
     border: 0px; 
@@ -37,7 +37,7 @@
  * Define our styling
  */
 
-.olbgD {
+/*.olbgD {
     background-color:#225588;}
 
 .olcgD {
@@ -73,11 +73,12 @@ a.olcloD:hover {
 .sep4 {
     font-size:4px;
     line-height:4px;}
-
+*/
 /*
  *  Overlibmws library - popup with MODAL form
  */
 
+/*
 .olraisedBlue {
     text-align:center; 
     background:#33aaff url(../js/overlibmws/raised_blue.gif) repeat-x bottom left;}
@@ -98,3 +99,4 @@ input.olinput {
     font-size:13px;
     color: #000000;}
 
+*/
