IE8 quirk on hovering fix

--- a/css/transposh_widget.css
+++ b/css/transposh_widget.css
@@ -7,4 +7,9 @@
 
 .transposh_flags a {
 	display: inline;
+	background: transparent; /* ie8 quirk */
+}
+
+.transposh_flags img:hover {
+	background: blue; /* ie8 quirk */
 }
