Removed blank.gif and tp_gif since those are no longer needed

--- a/css/transposh_flags.css
+++ b/css/transposh_flags.css
@@ -7,7 +7,7 @@
 	height:11px;
 	width:16px;
 	background-repeat:no-repeat;
-	/*overflow:hidden;*/
+	overflow:hidden;
         display:inline-block;
         /*border-color:transparent;
         border-style:solid;
