--- a/css/transposh_widget.css
+++ b/css/transposh_widget.css
@@ -3,15 +3,26 @@
  */
 .transposh_flags {
 	direction: ltr;
+    line-height:11px;
 }
-/* TODO - test hover over non css flags */
-.transposh_flags a span {
-        border-color:transparent;
-        border-style:solid;
-        border-width:1px 3px;
-        padding: 0;
+/*.transposh_flags a  {
+    line-height:11px;*/
+        /*display: inline;*/
+	/*background: transparent;*/ /* ie8 quirk */
+/*}*/
+
+.transposh_flags a:hover {
+    background:none;
 }
 
-.transposh_flags a span:hover {
-        border-color:blue;
+.transposh_flags a span, .transposh_flags a img {
+    border-color:transparent;
+    border-style:solid;
+    border-width:1px 3px;
+    padding: 0;
+}
+
+.transposh_flags a span:hover, .transposh_flags a img:hover {
+    border-color:blue;
+    height: 11px;
 }
