Small css fix to make icons more "resistant" to themes (line-height won't make them sparse)

--- a/css/transposh_widget.css
+++ b/css/transposh_widget.css
@@ -2,7 +2,8 @@
  * Widget's css 
  */
 .transposh_flags {
-    direction: ltr
+    direction: ltr;
+    line-height: 0;
 }
 /*.transposh_flags a  {
     line-height:11px;*/
