Fix css flags image name to contain # of languages to avoid upgrade issues

--- a/css/transposh_flags.css
+++ b/css/transposh_flags.css
@@ -28,7 +28,7 @@
 }
 
 .trf {
-	background-image:url(../img/flags.png);
+	background-image:url(../img/flags53.png);
 	height:11px;
 	width:16px;
 	background-repeat:no-repeat;
