Fixed flag bug reported by anphicle - fixed sprite

--- a/widgets/flags/tpw_flags_css.css
+++ b/widgets/flags/tpw_flags_css.css
@@ -83,7 +83,7 @@
 .trf-ru {background-position: -1056px 0}
 .trf-rs {background-position: -1080px 0}
 .trf-sk {background-position: -1104px 0}
-.trf-sl {background-position: -1128px 0}
+.trf-si {background-position: -1128px 0}
 .trf-es {background-position: -1152px 0}
 .trf-ke {background-position: -1176px 0}
 .trf-se {background-position: -1200px 0}
