New front end interface for translation editing, Covers items 4 7 and 11 (partially) on the 0.7 milestone page.

--- a/css/transposh.css
+++ b/css/transposh.css
@@ -25,3 +25,9 @@
 .tr-icon-green {
 	background-position:-24px 0;
 }
+.tr-icon-google {
+	background-image:url(../img/googleicon.png) !important;
+}
+.tr-icon-bing {
+	background-image:url(../img/bingicon.png) !important;
+}
