Add support for Apertium translation engine and the Esperanto language (from either English or Spanish)

--- a/css/transposh.css
+++ b/css/transposh.css
@@ -31,3 +31,6 @@
 .tr-icon-bing {
 	background-image:url(../img/bingicon.png) !important;
 }
+.tr-icon-apertium {
+	background-image:url(../img/apertiumicon.png) !important;
+}
