Added jQueryUI Themes support to the widget/edit interface and therefore answer item 12 on the milestone

--- a/css/transposh.css
+++ b/css/transposh.css
@@ -18,6 +18,7 @@
 	overflow:hidden;
 	text-indent:-99999px;
         display:inline-block;
+        cursor: pointer;
 }
 .tr-icon-yellow {
 	background-position:-12px 0;
