--- a/widgets/dropdown/tpw_image_dropdown.css
+++ b/widgets/dropdown/tpw_image_dropdown.css
@@ -29,7 +29,7 @@
 
 /* Code adapted from: http://www.jankoatwarpspeed.com/post/2009/07/28/reinventing-drop-down-with-css-jquery.aspx */
 
-.dropdown dd, .dropdown dt, .dropdown ul { margin:0px; padding:0px; }
+.dropdown, .dropdown dd, .dropdown dt, .dropdown ul { margin:0px; padding:0px; }
 .dropdown dd { position:relative; }
 .dropdown a, .dropdown a:visited { color:#816c5b; text-decoration:none; outline:none;}
 .dropdown a:hover { color:#5d4617;}
@@ -38,7 +38,7 @@
 		border:1px solid #d4ca9a; width:150px;}
 .dropdown dt a span {cursor:pointer; display:block; padding:5px;}
 .dropdown dd ul { background:#e4dfcb none repeat scroll 0 0; border:1px solid #d4ca9a; color:#C5C0B0; display:none;
-		  left:0px; padding:5px 0px; position:absolute; top:2px; width:auto; min-width:170px; list-style:none;}
+		  padding:5px 0px; position:absolute; top:2px; width:auto; min-width:170px; list-style:none;}
 .dropdown span.value { display:none;}
 .dropdown dd ul li a { padding:5px; display:block;}
 .dropdown dd ul li a:hover { background-color:#d0c9af;}
