--- a/widgets/flags/tpw_flags_css.css
+++ b/widgets/flags/tpw_flags_css.css
@@ -29,7 +29,7 @@
 
 /* define the .css sprites here */
 .trf {
-    background-image:url(flags65.png);
+    background-image:url(flags66.png);
     height:11px;
     width:16px;
     background-repeat:no-repeat;
@@ -63,38 +63,39 @@
 .trf-gr {background-position: -576px 0}
 .trf-in {background-position: -600px 0}
 .trf-ht {background-position: -624px 0}
-.trf-il {background-position: -648px 0}
-.trf-hu {background-position: -672px 0}
-.trf-is {background-position: -696px 0}
-.trf-id {background-position: -720px 0}
-.trf-ie {background-position: -744px 0}
-.trf-it {background-position: -768px 0}
-.trf-jp {background-position: -792px 0}
-.trf-kr {background-position: -816px 0}
-.trf-va {background-position: -840px 0}
-.trf-lv {background-position: -864px 0}
-.trf-lt {background-position: -888px 0}
-.trf-mk {background-position: -912px 0}
-.trf-my {background-position: -936px 0}
-.trf-mt {background-position: -960px 0}
-.trf-no {background-position: -984px 0}
-.trf-ir {background-position: -1008px 0}
-.trf-pl {background-position: -1032px 0}
-.trf-pt {background-position: -1056px 0}
-.trf-ro {background-position: -1080px 0}
-.trf-ru {background-position: -1104px 0}
-.trf-rs {background-position: -1128px 0}
-.trf-sk {background-position: -1152px 0}
-.trf-si {background-position: -1176px 0}
-.trf-es {background-position: -1200px 0}
-.trf-ke {background-position: -1224px 0}
-.trf-se {background-position: -1248px 0}
-.trf-ph {background-position: -1272px 0}
-.trf-lk {background-position: -1296px 0}
-.trf-th {background-position: -1320px 0}
-.trf-tr {background-position: -1344px 0}
-.trf-ua {background-position: -1368px 0}
-.trf-pk {background-position: -1392px 0}
-.trf-vn {background-position: -1416px 0}
-.trf-wales {background-position: -1440px 0}
-.trf-europeanunion {background-position: -1464px 0}
+.trf-la {background-position: -648px 0}
+.trf-il {background-position: -672px 0}
+.trf-hu {background-position: -696px 0}
+.trf-is {background-position: -720px 0}
+.trf-id {background-position: -744px 0}
+.trf-ie {background-position: -768px 0}
+.trf-it {background-position: -792px 0}
+.trf-jp {background-position: -816px 0}
+.trf-kr {background-position: -840px 0}
+.trf-va {background-position: -864px 0}
+.trf-lv {background-position: -888px 0}
+.trf-lt {background-position: -912px 0}
+.trf-mk {background-position: -936px 0}
+.trf-my {background-position: -960px 0}
+.trf-mt {background-position: -984px 0}
+.trf-no {background-position: -1008px 0}
+.trf-ir {background-position: -1032px 0}
+.trf-pl {background-position: -1056px 0}
+.trf-pt {background-position: -1080px 0}
+.trf-ro {background-position: -1104px 0}
+.trf-ru {background-position: -1128px 0}
+.trf-rs {background-position: -1152px 0}
+.trf-sk {background-position: -1176px 0}
+.trf-si {background-position: -1200px 0}
+.trf-es {background-position: -1224px 0}
+.trf-ke {background-position: -1248px 0}
+.trf-se {background-position: -1272px 0}
+.trf-ph {background-position: -1296px 0}
+.trf-lk {background-position: -1320px 0}
+.trf-th {background-position: -1344px 0}
+.trf-tr {background-position: -1368px 0}
+.trf-ua {background-position: -1392px 0}
+.trf-pk {background-position: -1416px 0}
+.trf-vn {background-position: -1440px 0}
+.trf-wales {background-position: -1464px 0}
+.trf-europeanunion {background-position: -1488px 0}
