Add support for professional translation by One Hour Translation

--- a/css/transposh.css
+++ b/css/transposh.css
@@ -35,3 +35,6 @@
 .tr-icon-apertium {
 	background-image:url(../img/apertiumicon.png) !important;
 }
+.tr-icon-oht {
+	background-image:url(../img/ohticon.png) !important;
+}
