--- a/css/admin.css
+++ b/css/admin.css
@@ -1,13 +1,11 @@
 /* 
-    Document   : admin
-    Created on : 24/11/2012, 04:12:31
-    Author     : root
-    Description:
-        Purpose of the stylesheet follows.
+    Document   : admin.css
+    Created on : 24/11/2012
+    Description: Style sheet for admin pages        
 */
 
 #icon-transposh-logo {
-    background: url(../img/tplogo32.png) no-repeat;
+    background: url('../img/tplogo32.png') no-repeat;
     /*float: left;*/
 }
 #sortable { list-style-type: none; margin: 0; padding: 0; }
@@ -37,11 +35,8 @@
 .highlight_default {
     background: #FFE45C;
 }
-.active {
+.lng_active {
     background: #45FF51;
-}
-.translateable {
-    background: #FFFF51;
 }
 .hidden {
     display: none;
