Fix box-sizing of css flags when externally set to border-box instead of content-box

--- a/widgets/flags/tpw_flags_css.css
+++ b/widgets/flags/tpw_flags_css.css
@@ -37,6 +37,7 @@
     background-repeat:no-repeat;
     overflow:hidden;
     display:inline-block;
+    box-sizing: content-box;
 }
 
 .trf-za {background-position: -24px 0}
