--- a/css/admin.css
+++ b/css/admin.css
@@ -10,8 +10,12 @@
 }
 #sortable { list-style-type: none; margin: 0; padding: 0; }
 /*	#sortable li, #default_lang li { margin: 3px 3px 3px 0; padding: 5px; float: ' . $this->localeleft . '; width: 190px; height: 14px;}*/
-#sortable li, #default_lang li { margin: 3px 3px 3px 0; padding: 5px; float: left; width: 190px; height: 14px;}
-.languages {
+#sortable li, #default_lang li {
+    margin: 3px 3px 3px 0;
+    padding: 5px;
+    float: left;
+    width: 240px;
+    height: 14px;
     -moz-border-radius: 6px;
     -khtml-border-radius: 6px;
     -webkit-border-radius: 6px;
@@ -20,17 +24,9 @@
     border-width:1px;
     line-height:1;
 }
+
 .highlight {
-    -moz-border-radius: 6px;
-    -khtml-border-radius: 6px;
-    -webkit-border-radius: 6px;
-    border-radius: 6px;
-    border-style:solid;
-    border-width:1px;
-    line-height:1;
     background: #FFE45C !important;
-    width: 190px;
-    height: 14px;
 }
 .highlight_default {
     background: #FFE45C !important;
