Now Supporting Baidu Translate and Cantonese

--- a/css/transposh.css
+++ b/css/transposh.css
@@ -42,3 +42,6 @@
 .tr-icon-yandex {
     background-image:url(../img/yandexicon.png) !important;
 }
+.tr-icon-baidu {
+    background-image:url(../img/baiduicon.png) !important;
+}
