--- a/widgets/flags/tpw_flags_css.css
+++ b/widgets/flags/tpw_flags_css.css
@@ -31,7 +31,7 @@
 
 /* define the .css sprites here */
 .trf {
-    background-image:url(flags96.png);
+    background-image:url(flags102.png);
     height:11px;
     width:16px;
     background-repeat:no-repeat;
@@ -42,81 +42,87 @@
 
 .trf-za {background-position: -24px 0}
 .trf-al {background-position: -48px 0}
-.trf-sa {background-position: -72px 0}
-.trf-am {background-position: -96px 0}
-.trf-az {background-position: -120px 0}
-.trf-es-ba {background-position: -144px 0}
-.trf-ru-ba {background-position: -168px 0}
-.trf-by {background-position: -192px 0}
-.trf-bd {background-position: -216px 0}
-.trf-ba {background-position: -240px 0}
-.trf-bg {background-position: -264px 0}
-.trf-es-ca {background-position: -288px 0}
-.trf-hk {background-position: -312px 0}
-.trf-ph {background-position: -336px 0}
-.trf-mw {background-position: -360px 0}
-.trf-cn {background-position: -384px 0}
-.trf-tw {background-position: -408px 0}
-.trf-hr {background-position: -432px 0}
-.trf-cz {background-position: -456px 0}
-.trf-dk {background-position: -480px 0}
-.trf-nl {background-position: -504px 0}
-.trf-esperanto {background-position: -528px 0}
-.trf-ee {background-position: -552px 0}
-.trf-fi {background-position: -576px 0}
-.trf-fr {background-position: -600px 0}
-.trf-es-ga {background-position: -624px 0}
-.trf-ge {background-position: -648px 0}
-.trf-de {background-position: -672px 0}
-.trf-gr {background-position: -696px 0}
-.trf-in {background-position: -720px 0}
-.trf-ht {background-position: -744px 0}
-.trf-ng {background-position: -768px 0}
-.trf-la {background-position: -792px 0}
-.trf-il {background-position: -816px 0}
-.trf-hu {background-position: -840px 0}
-.trf-is {background-position: -864px 0}
-.trf-id {background-position: -888px 0}
-.trf-ie {background-position: -912px 0}
-.trf-it {background-position: -936px 0}
-.trf-jp {background-position: -960px 0}
-.trf-kz {background-position: -984px 0}
-.trf-kh {background-position: -1008px 0}
-.trf-kr {background-position: -1032px 0}
-.trf-kg {background-position: -1056px 0}
-.trf-va {background-position: -1080px 0}
-.trf-lv {background-position: -1104px 0}
-.trf-lt {background-position: -1128px 0}
-.trf-mk {background-position: -1152px 0}
-.trf-mg {background-position: -1176px 0}
-.trf-my {background-position: -1200px 0}
-.trf-mt {background-position: -1224px 0}
-.trf-nz {background-position: -1248px 0}
-.trf-mn {background-position: -1272px 0}
-.trf-mm {background-position: -1296px 0}
-.trf-np {background-position: -1320px 0}
-.trf-no {background-position: -1344px 0}
-.trf-ir {background-position: -1368px 0}
-.trf-pl {background-position: -1392px 0}
-.trf-pt {background-position: -1416px 0}
-.trf-pk {background-position: -1440px 0}
-.trf-ro {background-position: -1464px 0}
-.trf-ru {background-position: -1488px 0}
-.trf-rs {background-position: -1512px 0}
-.trf-ls {background-position: -1536px 0}
-.trf-lk {background-position: -1560px 0}
-.trf-sk {background-position: -1584px 0}
-.trf-si {background-position: -1608px 0}
-.trf-so {background-position: -1632px 0}
-.trf-es {background-position: -1656px 0}
-.trf-tz {background-position: -1680px 0}
-.trf-se {background-position: -1704px 0}
-.trf-tj {background-position: -1728px 0}
-.trf-ru-ta {background-position: -1752px 0}
-.trf-th {background-position: -1776px 0}
-.trf-tr {background-position: -1800px 0}
-.trf-ua {background-position: -1824px 0}
-.trf-uz {background-position: -1848px 0}
-.trf-vn {background-position: -1872px 0}
-.trf-gb-wa {background-position: -1896px 0}
-.trf-europeanunion {background-position: -1920px 0}
+.trf-et {background-position: -72px 0}
+.trf-sa {background-position: -96px 0}
+.trf-am {background-position: -120px 0}
+.trf-az {background-position: -144px 0}
+.trf-es-ba {background-position: -168px 0}
+.trf-ru-ba {background-position: -192px 0}
+.trf-by {background-position: -216px 0}
+.trf-bd {background-position: -240px 0}
+.trf-ba {background-position: -264px 0}
+.trf-bg {background-position: -288px 0}
+.trf-es-ca {background-position: -312px 0}
+.trf-hk {background-position: -336px 0}
+.trf-ph {background-position: -360px 0}
+.trf-mw {background-position: -384px 0}
+.trf-cn {background-position: -408px 0}
+.trf-tw {background-position: -432px 0}
+.trf-fr {background-position: -456px 0}
+.trf-hr {background-position: -480px 0}
+.trf-cz {background-position: -504px 0}
+.trf-dk {background-position: -528px 0}
+.trf-nl {background-position: -552px 0}
+.trf-esperanto {background-position: -576px 0}
+.trf-ee {background-position: -600px 0}
+.trf-fi {background-position: -624px 0}
+.trf-es-ga {background-position: -648px 0}
+.trf-ge {background-position: -672px 0}
+.trf-de {background-position: -696px 0}
+.trf-gr {background-position: -720px 0}
+.trf-in {background-position: -744px 0}
+.trf-ht {background-position: -768px 0}
+.trf-ng {background-position: -792px 0}
+.trf-us-ha {background-position: -816px 0}
+.trf-la {background-position: -840px 0}
+.trf-il {background-position: -864px 0}
+.trf-hu {background-position: -888px 0}
+.trf-is {background-position: -912px 0}
+.trf-id {background-position: -936px 0}
+.trf-ie {background-position: -960px 0}
+.trf-it {background-position: -984px 0}
+.trf-jp {background-position: -1008px 0}
+.trf-kz {background-position: -1032px 0}
+.trf-kh {background-position: -1056px 0}
+.trf-kg {background-position: -1080px 0}
+.trf-kr {background-position: -1104px 0}
+.trf-tr {background-position: -1128px 0}
+.trf-va {background-position: -1152px 0}
+.trf-lv {background-position: -1176px 0}
+.trf-lt {background-position: -1200px 0}
+.trf-lu {background-position: -1224px 0}
+.trf-mk {background-position: -1248px 0}
+.trf-mg {background-position: -1272px 0}
+.trf-my {background-position: -1296px 0}
+.trf-mt {background-position: -1320px 0}
+.trf-nz {background-position: -1344px 0}
+.trf-mn {background-position: -1368px 0}
+.trf-mm {background-position: -1392px 0}
+.trf-np {background-position: -1416px 0}
+.trf-no {background-position: -1440px 0}
+.trf-ir {background-position: -1464px 0}
+.trf-pl {background-position: -1488px 0}
+.trf-pt {background-position: -1512px 0}
+.trf-pk {background-position: -1536px 0}
+.trf-ro {background-position: -1560px 0}
+.trf-ru {background-position: -1584px 0}
+.trf-ws {background-position: -1608px 0}
+.trf-gb-sc {background-position: -1632px 0}
+.trf-rs {background-position: -1656px 0}
+.trf-ls {background-position: -1680px 0}
+.trf-zw {background-position: -1704px 0}
+.trf-lk {background-position: -1728px 0}
+.trf-sk {background-position: -1752px 0}
+.trf-si {background-position: -1776px 0}
+.trf-so {background-position: -1800px 0}
+.trf-es {background-position: -1824px 0}
+.trf-tz {background-position: -1848px 0}
+.trf-se {background-position: -1872px 0}
+.trf-tj {background-position: -1896px 0}
+.trf-ru-ta {background-position: -1920px 0}
+.trf-th {background-position: -1944px 0}
+.trf-ua {background-position: -1968px 0}
+.trf-uz {background-position: -1992px 0}
+.trf-vn {background-position: -2016px 0}
+.trf-gb-wa {background-position: -2040px 0}
+.trf-europeanunion {background-position: -2064px 0}
