--- a/css/transposh.css
+++ b/css/transposh.css
@@ -19,7 +19,7 @@
     text-indent:-99999px;
     display:inline-block;
     cursor:pointer;
-    box-shadow:0;
+    box-shadow:none;
 }
 .tr-icon-yellow {
     background-position:-12px 0;
@@ -35,9 +35,6 @@
 }
 .tr-icon-apertium {
     background-image:url(../img/apertiumicon.png) !important;
-}
-.tr-icon-oht {
-    background-image:url(../img/ohticon.png) !important;
 }
 .tr-icon-yandex {
     background-image:url(../img/yandexicon.png) !important;
